updates early July 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -107,9 +107,9 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
 ---\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
 ---\emph{General Co-Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
----\emph{Local Committee Member of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
----\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).\\
+---\emph{Sponsorship Chair \& Program Co-Chair of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
+---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
 
 %%\hrule
 \section*{Areas of Interest}
@@ -185,7 +185,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 
 \subsection*{Research Grants, Honors \& Awards}
-\years{2019} \textsc{Travel grant for EU-related research and promotion} (30,000 NOK).\\
+\years{2019} \textsc{Travel grant for European research and promotion} (30,000 NOK). NTNU, Trondheim, Norway.\\
 \years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
@@ -229,7 +229,7 @@ Role: Co-organizer and participant of the event. \\
 Total Fundraised British Pound Amount: \textsterling2,000\\[.1cm]
 \years{05/2016--05/2017}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization. \\
-Total Fundraised Dollar Amount: \$11,450\\[.1cm]
+Total Fundraised Dollar Amount: \$11,450
 %\years{08/2016--05/2017}\emph{2016-2017 Academic Year}\\
 %Funding body: School of Music, Georgia Tech. \\
 %Total Dollar Amount: \$2,500\\[.1cm]
@@ -437,7 +437,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Workshops}
 \noindent
 
-\years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Modul 5 Audiovisual Application Design).\\
+\years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
 \years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
 \years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
 \years{2018b} \textbf{Xambó, A.} (July 12--13, 2018). “Creative Audio Programming". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies.\\
@@ -756,12 +756,13 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \noindent
 
 \years{2019}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
+\years{2018--2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS),  Queen Mary University of London (QMUL).
 
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
 \years{2019e--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
-\years{2019d}\textsc{Local Committee Member}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
+\years{2019d}\textsc{Sponsorship Chair \& Program Co-Chair}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019b}\textsc{Paper Co-Chair \& Session Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
