--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -103,7 +103,7 @@ MSc, Information, Communication and Audiovisual Media Technologies, Universitat 
 BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 
 {\textbf{Employment}}\\
-Associate Professor, NTNU, 2018--present. I am teaching graduate courses in audio programming, human-computer interaction, physical computing and sonification. I am co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--present). I am the Music, Communication and Technology (NTNU/UiO)'s master programme council leader and programme study leader at NTNU. I am a visiting lecturer at Queen Mary University of London.\\
+Associate Professor, NTNU, 2018--present. I am teaching graduate courses in audio programming, human-computer interaction, physical computing and sonification. I am co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--present). I am the Music, Communication and Technology (NTNU/UiO)'s master programme council leader and MCT programme study leader at NTNU. I am Associate Fellow of the Higher Education Academy.\\
 I have been a postdoc at Queen Mary University of London (2017--2018) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--2010) as well as co-founder of my own interactive media studio (2004--2010).\\
 
@@ -111,11 +111,11 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at Web Audio Conference (2018, 2017); Audio Mostly (2018, 2017, 2010); New Interfaces for Musical Expression (2019, 2018, 2014, 2011, 2008); Tangible, Embedded, and Embodied Interaction Conference (2018, 2017, 2011); International Conference on Computational Creativity (2017); International Conference on Live Coding (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing Conference (2016, 2012, 2010); International Conference of Live Interfaces (2016); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2012, 2011); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (2019, 2018, 2014, 2011, 2008); Web Audio Conference (2018, 2017); Audio Mostly (2018, 2017, 2010); Tangible, Embedded, and Embodied Interaction Conference (2018, 2017, 2011); International Conference on Computational Creativity (2017); International Conference on Live Coding (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing Conference (2016, 2012, 2010); International Conference of Live Interfaces (2016); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2012, 2011); and International Computer Music Conference (2011).\\
 
 {\textbf{Performances}} at International Conference on Live Coding (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); Web Audio Conference (2018, 2017); Cube Fest (2018); New Interfaces for Musical Expression (2018, 2017); Tangible, Embedded, and Embodied Interaction Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); PHONOS (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
-{\textbf{Conference Organizer}} for Web Audio Conference (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); New Interfaces for Musical Expression Conference (2019, paper co-chair, session chair); International Conference of Live Interfaces (2020, local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); and International Computer Music Conference (2011, session chair).\\
+{\textbf{Conference Organizer}} for Web Audio Conference (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); New Interfaces for Musical Expression Conference (2019, paper co-chair, session chair); International Conference of Live Interfaces (2020, sponsorship chair \& program co-chair); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); and International Computer Music Conference (2011, session chair).\\
 
 {\textbf{Interviews/Press Coverage}} in Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
