updates late July 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -110,6 +110,7 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{Sponsorship Chair \& Program Co-Chair of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
+---\emph{Programme Committee Member}, ACM Tangible Embedded and Embodied Interaction 2020 Conference.\\ 
 
 %%\hrule
 \section*{Areas of Interest}
@@ -162,7 +163,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Employment}
 \noindent
 \years{08/2018--present}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
-\years{08/2018--present}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
+\years{08/2018--2019}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
 \years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
 \years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology (GTCMT) | Digital Media Program, Georgia Tech. \\
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
@@ -761,6 +762,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
+\years{2019f}\textsc{Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
 \years{2019e--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
 \years{2019d}\textsc{Sponsorship Chair \& Program Co-Chair}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
@@ -778,6 +780,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Conference Reviewer}
 \noindent
 
+\years{2019}\emph{Audio Mostly} (2019).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
 \years{2018--2019}\emph{International Society for Music Information Retrieval Conference} (2018--2019).\\
