updates early September 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -110,7 +110,8 @@ Norwegian University of Science and Technology (NTNU)\\
 ---\emph{Sponsorship Chair \& Program Co-Chair of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Programme Committee Member}, ACM Tangible Embedded and Embodied Interaction 2020 Conference.\\ 
+---\emph{Programme Committee Member}, ACM Tangible Embedded and Embodied Interaction 2020 Conference, Sydney, Australia.\\ 
+---\emph{Programme Committee Member}, Tenth Workshop on Ubiquitous Music, Porto Seguro, Brazil.
 
 %%\hrule
 \section*{Areas of Interest}
@@ -279,25 +280,27 @@ Candidate’s Share: 50\% (\$1,650)
 \textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Scholar Google}\\
 \textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
-\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}
+\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\[1.2cm]%hack
 
 \section*{Publications}
 \noindent
 
 \subsection*{Books}
 \noindent
-\years{2004}\textbf{Xambó, A.} (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. ISBN 8441516979.
+
+\years{2019}Queiroz, M., \textbf{Xambó, A.} (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
+\years{2004}\textbf{Xambó, A.} (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. Editor: Eugenio Tuya Feijoo. ISBN 8441516979.
 
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
 
-\years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (in press). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: an interdisciplinary approach. Routledge.\\
+\years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: an interdisciplinary approach. Routledge. pp. 248-282. ISBN 9781138093966.\\
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
 \subsection*{Journal Articles}
 \noindent
-\years{2018c}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
+\years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
@@ -309,14 +312,14 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-\years{2019}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil.\\
+\years{2019}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil. pp. 216–221.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018d}\textbf{Xambó, A.}, Pauwels, J., Roma, G., Barthet, M. Fazekas, G. (2018) "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Proceedings of Audio Mostly 2018: Sound in Immersion and Emotion (AM '18). Wrexham, United Kingdom. \\
-\years{2018c}\textbf{Xambó, A.} (2018) “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 174--177.\\ 
-\years{2018b}\textbf{Xambó, A.}, Roma, G., Lerch, A., Barthet, M., Fakekas, G. (2018) “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 364--369.\\ 
-\years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 344--345.\\ 
-\years{2017d}\textbf{Xambó, A.}, Shah, P., Roma, G., Freeman, J., Magerko, B. (2017) “Turn-taking and Chatting in Collaborative Music Live Coding". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\ 
+\years{2018c}\textbf{Xambó, A.} (2018) “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA. pp. 174--177.\\ 
+\years{2018b}\textbf{Xambó, A.}, Roma, G., Lerch, A., Barthet, M., Fakekas, G. (2018) “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA. pp. 364--369.\\ 
+\years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA. pp. 344--345.\\ 
+\years{2017d}\textbf{Xambó, A.}, Shah, P., Roma, G., Freeman, J., Magerko, B. (2017) “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{Nominee for Best Paper Award}. In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\ 
 \years{2017c}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Handwaving: Gesture Recognition for Participatory Mobile Music". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\
 \years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London\\ 
 \years{2017a}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and Ownership with a Tangible Computational Music Installation for Informal Learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
@@ -473,6 +476,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Participation in Compilations}
 \noindent
 
+\years{2019}Anna Xambó. “Kicks \& Cuts" (2 min 21 sec). in \emph{10th Anniversary Festival en Tiempo Real - WoNoMute Playlist} [WAV file].\\
 \years{2018}peterMann. “n02-petermann" (11 min 10 sec). in \emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2016}peterMann. “Go wild y'all" (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
 \years{2015}peterMann. “ldnsktch01" (1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
@@ -694,14 +698,20 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 Escola Glòries, Barcelona.\\
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
 
-\section*{Supervision}
+\section*{Supervision  \& Mentoring}
 \noindent
 
-\years{11/2018--present}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
+\years{08/2018--present}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistant Mari Lesteberg.\\
 \years{01/2018--08/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons. Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
-\years{05/2016--12/2017}Mentor and advisor the female graduate students of the student-led organization \emph{Women in Music Tech}, including the Chair of the organization, Léa Ikkache, the Editor-in-Chief of the newsletter Amruta Vidwans and female newcomers to the organization, such as Jyoti Narang.\\
+\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other new members, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
+
+\section*{External Examining}
+\noindent
+
+\years{08/2019}External MSc examiner, Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo.\\
+\years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
 
 \section*{Additional Experience}
 \noindent
@@ -732,9 +742,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Artistic Collective Projects}
 \noindent
 
-\years{2008--present}Co-Founder of the experimental electronic music label Carpal Tunnel. Barcelona.\\
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\[1.3cm]%hack
 
 %\hrule
 \section*{Professional Activities}
@@ -780,7 +789,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Conference Reviewer}
 \noindent
 
-\years{2019}\emph{Audio Mostly} (2019).\\
+\years{2019b}\emph{Tenth Workshop on Ubiquitous Music} (2020).\\
+\years{2019a}\emph{Audio Mostly} (2019).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
 \years{2018--2019}\emph{International Society for Music Information Retrieval Conference} (2018--2019).\\
@@ -794,12 +804,14 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2015--2019}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2019).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
-\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
+\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2020).\\
 \years{2011--2019}\emph{New Interfaces for Musical Expression} (2011--2019).
 
 \subsection*{Journal Reviewer}
 \noindent
 
+\years{2019b}\emph{Computer Music Journal}. MIT Press Journals.\\
+\years{2019a}\emph{Arts}. MDPI.\\
 \years{2018d}\emph{PLOS One}. Public Library of Science.\\
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
 \years{2018b}\emph{Journal of New Music Research}. ScholarOne Manuscripts.\\
@@ -847,8 +859,10 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 \subsection*{Entrepreneurship}
 \noindent
 \years{08/2018--present}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
-Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the curation and organization of a monthly seminar series of talks, the creation of an online archive and generation of related content to give more visibility to the work of women in music tech.
-\\\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
+Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU in collaboration with University of Oslo (UiO) that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the curation and organization of a monthly seminar series of talks, the creation of an online archive and generation of related content to give more visibility to the work of women in music tech.\\
+\years{2009--present}\emph{Carpal Tunnel}, Barcelona, Spain.\\
+Co-Founder of the online music record label Carpal Tunnel.\\
+\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
 Co-Founder and Co-Chair of \emph{Women in Music Tech}, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
 \years{02/2004--06/2010}\emph{Nodular Soft}, Barcelona. \\
 Co-Founder of a freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.
@@ -869,7 +883,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 \subsection*{Languages}
 \noindent
 
-Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency--TOEFL iBT: 97/120 in 2009, PhD in the UK), Norwegian (basic level--Level 1 completed in 2019), German (basic level--Level 2 completed in 1991), Italian (basic level--Level 1 completed in 1991), French (basic level--self-taught).
+Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency, TOEFL iBT: 97/120 in 2009, PhD in the UK, living in the UK/USA/Norway since 2010), Norwegian (basic level, Level 1 completed in 2019), German (basic level, Level 2 completed in 1991), Italian (basic level, Level 1 completed in 1991), French (basic level, self-taught).
 
 \subsection*{Computer Skills}
 \noindent
@@ -879,7 +893,7 @@ Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQu
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
 Music Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
-Text \& Multimedia Analysis Apps: ELAN, MAXQDA, VCode.\\
+Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.\\
 Hardware: Arduino, Bela.
 
